resources/assets/sass/_core.scss
/*
 * Core: General Layout Style
 * -------------------------
 */

%clearfix {
    zoom:1;
    &:before, &:after {
        content: "\0020";
        display: block;
        height: 0;
        overflow: hidden;
    }
    &:after {
        clear: both;
    }
}


html,
body {
  min-height: 100%;
  .layout-boxed & {
    height: 100%;
  }
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: $body-bg;
  font-family: $default-font-family;
  font-weight: 400;
  font-size: $default-font-size;
  overflow-x: hidden;
  overflow-y: auto;
}

/* Layout */
.wrapper {
  @extend %clearfix;
  min-height: 100%;
  position: relative;
  overflow: hidden;
  .layout-boxed & {
    max-width: 1250px;
    margin: 0 auto;
    min-height: 100%;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
    position: relative;
  }
}

.navbar-brand {
  > img {
    display: inline;
    margin: -10px 10px 0 0;
    width: 40px;
    height: 40px;
  }
}

.layout-boxed {
  background: url(#{$boxed-layout-bg-image-path}) repeat fixed;
}

/*
 * Content Wrapper - contains the main content
 * ```.right-side has been deprecated as of v2.0.0 in favor of .content-wrapper  ```
 */
.content-wrapper,
.right-side {
  //Using disposable variable to join statements with a comma
  $transition-rule: $transition-speed $transition-fn,
  margin $transition-speed $transition-fn;
  @include transition-transform($transition-rule);
  margin-left: $sidebar-width;
  z-index: 820;
  //Top nav layout
  .layout-top-nav & {
    margin-left: 0;
  }
  @media (max-width: $screen-xs-max) {
    margin-left: 0;
  }
  //When opening the sidebar on large screens
  .sidebar-collapse & {
    @media (min-width: $screen-sm) {
      margin-left: 0;
    }
  }
  //When opening the sidebar on small screens
  .sidebar-open & {
    @media (max-width: $screen-xs-max) {
      @include translate($sidebar-width, 0);
    }
  }
}

.content-wrapper,
.right-side {
  top: 0;
  position: relative;
  min-height: calc(100vh - 0px);
  background-color: $body-bg;
  z-index: 800;
}

.has-sub-sidebar {
  .content-wrapper {
    margin-left: 23%;
  }
}

.main-footer {
  background: $body-bg;
  padding: 15px 20px;
  color: #444;
  border-top: 1px solid $gray;
  text-align: center;
}

/* Fixed layout */
.fixed {
  .main-header,
  .main-sidebar,
  .left-side {
    position: fixed;
  }
  .main-header {
    top: 0;
    right: 0;
    left: 0;
  }
  .content-wrapper,
  .right-side {
    padding-top: 50px;
    @media (max-width: $screen-xs-max) {
      padding-top: 100px;
    }
  }
  &.layout-boxed {
    .wrapper {
      max-width: 100%;
    }
  }
}

body.hold-transition {
  .content-wrapper,
  .right-side,
  .main-footer,
  .main-sidebar,
  .left-side,
  .main-header > .navbar,
  .main-header .logo {
    /* Fix for IE */
    @include transition(none);
  }
}

/* Content */
.content {
  min-height: 250px;
  padding: 15px;
  @include container-fixed($grid-gutter-width);
}

/* H1 - H6 font */
h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  font-family: $h1-h6-family;
}

/* General Links */
a {
  color: $link-color;
}

a:hover,
a:active,
a:focus {
  outline: none;
  text-decoration: none;
  color: $link-hover-color;
}

/* Page Header */
.page-header {
  margin: 10px 0 20px 0;
  font-size: 22px;

  > small {
    color: #666;
    display: block;
    margin-top: 5px;
  }
}
.piplin-spin {
    -webkit-animation: piplin-spin 2s infinite linear;
    animation: piplin-spin 2s infinite linear;
}

@-webkit-keyframes piplin-spin {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
            transform: rotate(359deg);
  }
}

@keyframes piplin-spin {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
            transform: rotate(359deg);
  }
}

